# DP

./: .gitignore  README.md  args.yaml  args_dfs.yaml  args_sdd.yaml  comments.pickle  dataset_analysis.ipynb  datasets_processing.ipynb  embeddings.pth  evaluation.ipynb  evaluation.py  iresnet518_embeddings.pth  mnt.sh  performance.ipynb  performance.py  plots.ipynb  plots_data.ipynb  plots_data_gen.ipynb  plots_data_gen.py  pyproject.toml  requirements.txt  serfiq.py  train.ipynb  train.py  train_my.py  train_pbs.sh  visualisations.ipynb
backbones/: iresnet.py
csvs/quality/: IITD, CR-FIQA.pickle  IITD, DFS.pickle  IITD, Magnitude MagFace.pickle  IITD, PFE ArcFace.pickle  IITD, PFE MagFace.pickle  IITD, SDD-FIQA.pickle  IITD, SER-FIQ ArcFace.pickle  IITD, SER-FIQ MagFace.pickle  INNO, CR-FIQA.pickle  INNO, DFS.pickle  INNO, Magnitude MagFace.pickle  INNO, PFE ArcFace.pickle  INNO, PFE MagFace.pickle  INNO, SDD-FIQA.pickle  INNO, SER-FIQ ArcFace.pickle  INNO, SER-FIQ MagFace.pickle
datasets/: __init__.py  dataset.py  datasets_processing.ipynb  utils.py
iresnet50-arcface-today/: args.yaml
lightning/: args.json  args.yaml  data_loader_test.ipynb  dataloading.ipynb  magq.ipynb  notebook.ipynb  pickletest.ipynb  recognition_model.py  requirements.txt  run_training.pbs  sddfiqa.py  sddfiqa_pseudolabel_gen.ipynb  serfiq.ipynb  serfiq.py  test.ipynb  train.py  train_recognition.py  unwrap.ipynb
lightning/backbones/: __init__.py  (+9 more)
old/: Obsah.txt  datasets_processing.ipynb  evaluation.py  performance.ipynb  requirements.txt  serfiq.py  train_my.py
wandb/: latest-run
(+94 files in other folders)
