[tool.poetry]
name = "dp"
version = "0.1.0"
description = ""
authors = ["Marek Vasko <xvasko16@vutbr.cz>"]

[tool.poetry.dependencies]
python = "3.10.*"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
torchmetrics = "^0.7.3"
pytorch-lightning = "^1.6.0"
numpy = "^1.22.3"
pandas = "^1.4.2"
sklearn = "^0.0"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
plotly = "^5.7.0"
easydict = "^1.9"
wandb = "^0.12.12"
jupyterlab = "^3.3.2"
jupyter-dash = "^0.4.2"
dash-bootstrap-components = "^1.1.0"
dash-bootstrap-templates = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
